[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/player/prospector_anim_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://assets/floor_tiles/combined.tres" type="TileSet" id=2]
[ext_resource path="res://player/PlayerHub.gd" type="Script" id=3]
[ext_resource path="res://Camera2D2.gd" type="Script" id=4]
[ext_resource path="res://environment/ShopSign.tscn" type="PackedScene" id=5]
[ext_resource path="res://environment/ParcelSign.tscn" type="PackedScene" id=6]
[ext_resource path="res://environment/Rock.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/Hub/Hub_ShopUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/Hub/HubUI.gd" type="Script" id=9]
[ext_resource path="res://ui/Hub/Hub_InteractionUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://Hub.gd" type="Script" id=11]
[ext_resource path="res://ui/Hub/Hub_MenuUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/Hub/Hub_ParcelUI.tscn" type="PackedScene" id=13]
[ext_resource path="res://ui/Hub/Hub_OptionsUI.tscn" type="PackedScene" id=14]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.0
height = 7.99999

[sub_resource type="Animation" id=2]
resource_name = "IdleDown"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
length = 1.05
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525, 0.7, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=4]
length = 1.05
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525, 0.7, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 24.0
height = 0.0

[node name="Hub" type="Node2D"]
script = ExtResource( 11 )

[node name="HubUI" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="ShopUI" parent="HubUI" instance=ExtResource( 8 )]
visible = false

[node name="InteractionUI" parent="HubUI" instance=ExtResource( 10 )]

[node name="MenuUI" parent="HubUI" instance=ExtResource( 12 )]
visible = false

[node name="ParcelUI" parent="HubUI" instance=ExtResource( 13 )]
visible = false

[node name="OptionsUI" parent="HubUI" instance=ExtResource( 14 )]
visible = false

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 1, 1, 1, 1, 2, 2, 1, 2, 3, 1, 2, 4, 1, 2, 5, 1, 2, 6, 1, 2, 7, 1, 2, 8, 1, 2, 9, 1, 2, 10, 1, 2, 11, 1, 2, 12, 1, 2, 13, 1, 2, 14, 1, 2, 15, 1, 2, 16, 1, 2, 17, 1, 2, 18, 1, 2, 19, 1, 2, 20, 1, 2, 21, 1, 2, 22, 1, 2, 23, 1, 2, 24, 1, 2, 25, 1, 2, 26, 1, 2, 27, 1, 2, 28, 1, 2, 29, 1, 2, 30, 1, 2, 31, 1, 2, 32, 1, 2, 33, 1, 3, 65536, 1, 65537, 65537, 1, 196610, 65538, 1, 196611, 65539, 1, 196610, 65540, 1, 196610, 65541, 1, 65538, 65542, 1, 65538, 65543, 1, 196610, 65544, 1, 196611, 65545, 1, 196610, 65546, 1, 65538, 65547, 1, 196610, 65548, 1, 196611, 65549, 1, 65538, 65550, 1, 196609, 65551, 1, 196611, 65552, 1, 65538, 65553, 1, 196610, 65554, 1, 196610, 65555, 1, 196609, 65556, 1, 65538, 65557, 1, 65538, 65558, 1, 196609, 65559, 1, 196609, 65560, 1, 65538, 65561, 1, 65538, 65562, 1, 65538, 65563, 1, 65538, 65564, 1, 196609, 65565, 1, 196609, 65566, 1, 196609, 65567, 1, 65538, 65568, 1, 196611, 65569, 1, 65539, 131072, 1, 65537, 131073, 1, 196611, 131074, 1, 196611, 131075, 1, 196610, 131076, 1, 196610, 131077, 1, 196611, 131078, 1, 196609, 131079, 1, 65538, 131080, 1, 196610, 131081, 1, 196611, 131082, 1, 196611, 131083, 1, 65538, 131084, 1, 196611, 131085, 1, 196610, 131086, 1, 196611, 131087, 1, 196610, 131088, 1, 196611, 131089, 1, 65538, 131090, 1, 65538, 131091, 1, 196611, 131092, 1, 196610, 131093, 1, 65538, 131094, 1, 65538, 131095, 1, 196611, 131096, 1, 196609, 131097, 1, 196610, 131098, 1, 196610, 131099, 1, 196611, 131100, 1, 65538, 131101, 1, 196610, 131102, 1, 196610, 131103, 1, 196609, 131104, 1, 196610, 131105, 1, 65539, 196608, 1, 65537, 196609, 1, 196611, 196610, 1, 65538, 196611, 1, 196611, 196612, 1, 196609, 196613, 1, 196611, 196614, 1, 196611, 196615, 1, 65538, 196616, 1, 65538, 196617, 1, 196609, 196618, 1, 196611, 196619, 1, 196609, 196620, 1, 196611, 196621, 1, 65538, 196622, 1, 196610, 196623, 1, 196611, 196624, 1, 196610, 196625, 1, 196609, 196626, 1, 196611, 196627, 1, 65538, 196628, 1, 196610, 196629, 1, 196610, 196630, 1, 196610, 196631, 1, 196611, 196632, 1, 196611, 196633, 1, 196610, 196634, 1, 196609, 196635, 1, 196610, 196636, 1, 196611, 196637, 1, 196609, 196638, 1, 196611, 196639, 1, 196611, 196640, 1, 196609, 196641, 1, 65539, 262144, 1, 65537, 262145, 1, 65538, 262146, 1, 196610, 262147, 1, 196611, 262148, 1, 196611, 262149, 1, 196611, 262150, 1, 196610, 262151, 1, 196611, 262152, 1, 196609, 262153, 1, 196610, 262154, 1, 196611, 262155, 1, 196609, 262156, 1, 65538, 262157, 1, 196611, 262158, 1, 196610, 262159, 1, 65538, 262160, 1, 196611, 262161, 1, 196610, 262162, 1, 196609, 262163, 1, 65538, 262164, 1, 196611, 262165, 1, 196610, 262166, 1, 196611, 262167, 1, 196610, 262168, 1, 196609, 262169, 1, 196611, 262170, 1, 196611, 262171, 1, 196609, 262172, 1, 65538, 262173, 1, 196609, 262174, 1, 196611, 262175, 1, 196611, 262176, 1, 196611, 262177, 1, 65539, 327680, 1, 65537, 327681, 1, 196610, 327682, 1, 196611, 327683, 1, 196609, 327684, 1, 196610, 327685, 1, 65538, 327686, 1, 196609, 327687, 1, 196611, 327688, 1, 196609, 327689, 1, 196610, 327690, 1, 65538, 327691, 1, 196609, 327692, 1, 65538, 327693, 1, 196610, 327694, 1, 196610, 327695, 1, 196610, 327696, 1, 196609, 327697, 1, 196610, 327698, 1, 196611, 327699, 1, 196609, 327700, 1, 196610, 327701, 1, 196609, 327702, 1, 196610, 327703, 1, 196610, 327704, 1, 196609, 327705, 1, 196609, 327706, 1, 65538, 327707, 1, 196609, 327708, 1, 196611, 327709, 1, 196609, 327710, 1, 65538, 327711, 1, 196609, 327712, 1, 196611, 327713, 1, 65539, 393216, 1, 65537, 393217, 1, 196610, 393218, 1, 196609, 393219, 1, 196609, 393220, 1, 196611, 393221, 1, 196609, 393222, 1, 65538, 393223, 1, 196611, 393224, 1, 196611, 393225, 1, 196611, 393226, 1, 196611, 393227, 1, 196610, 393228, 1, 196609, 393229, 1, 196609, 393230, 1, 196611, 393231, 1, 196611, 393232, 1, 65538, 393233, 1, 196609, 393234, 1, 196609, 393235, 1, 196609, 393236, 1, 196611, 393237, 1, 196609, 393238, 1, 196610, 393239, 1, 65538, 393240, 1, 65538, 393241, 1, 196609, 393242, 1, 65538, 393243, 1, 196609, 393244, 1, 196611, 393245, 1, 65538, 393246, 1, 65538, 393247, 1, 196610, 393248, 1, 196609, 393249, 1, 65539, 458752, 1, 65537, 458753, 1, 196609, 458754, 1, 196609, 458755, 1, 65538, 458756, 1, 196611, 458757, 1, 196609, 458758, 1, 196610, 458759, 1, 196609, 458760, 1, 196611, 458761, 1, 196609, 458762, 1, 196609, 458763, 1, 196611, 458764, 1, 196610, 458765, 1, 196609, 458766, 1, 196610, 458767, 1, 196611, 458768, 1, 196609, 458769, 1, 65538, 458770, 1, 196609, 458771, 1, 196609, 458772, 1, 196609, 458773, 1, 65538, 458774, 1, 65538, 458775, 1, 196609, 458776, 1, 196610, 458777, 1, 196609, 458778, 1, 196611, 458779, 1, 196610, 458780, 1, 196610, 458781, 1, 196611, 458782, 1, 65538, 458783, 1, 196611, 458784, 1, 65538, 458785, 1, 65539, 524288, 1, 65537, 524289, 1, 196611, 524290, 1, 196609, 524291, 1, 196609, 524292, 1, 65538, 524293, 1, 196610, 524294, 1, 196610, 524295, 1, 196610, 524296, 1, 196610, 524297, 1, 196610, 524298, 1, 65538, 524299, 1, 196609, 524300, 1, 65538, 524301, 1, 65538, 524302, 1, 65538, 524303, 1, 65538, 524304, 1, 65538, 524305, 1, 196610, 524306, 1, 196610, 524307, 1, 196611, 524308, 1, 196611, 524309, 1, 196609, 524310, 1, 196611, 524311, 1, 196610, 524312, 1, 196610, 524313, 1, 196611, 524314, 1, 196610, 524315, 1, 196611, 524316, 1, 196609, 524317, 1, 196611, 524318, 1, 196611, 524319, 1, 65538, 524320, 1, 65538, 524321, 1, 65539, 589824, 1, 65537, 589825, 1, 196610, 589826, 1, 196611, 589827, 1, 65538, 589828, 1, 196611, 589829, 1, 65538, 589830, 1, 65538, 589831, 1, 196611, 589832, 1, 196611, 589833, 1, 196610, 589834, 1, 196610, 589835, 1, 65538, 589836, 1, 196611, 589837, 1, 196611, 589838, 1, 196609, 589839, 1, 196611, 589840, 1, 65538, 589841, 1, 196609, 589842, 1, 196609, 589843, 1, 196609, 589844, 1, 196609, 589845, 1, 196610, 589846, 1, 65538, 589847, 1, 196610, 589848, 1, 65538, 589849, 1, 65538, 589850, 1, 65538, 589851, 1, 196609, 589852, 1, 196610, 589853, 1, 196611, 589854, 1, 196610, 589855, 1, 196609, 589856, 1, 196609, 589857, 1, 65539, 655360, 1, 65537, 655361, 1, 196610, 655362, 1, 196611, 655363, 1, 196611, 655364, 1, 196609, 655365, 1, 196610, 655366, 1, 196611, 655367, 1, 196610, 655368, 1, 196611, 655369, 1, 65538, 655370, 1, 196611, 655371, 1, 196610, 655372, 1, 196610, 655373, 1, 196611, 655374, 1, 196609, 655375, 1, 196610, 655376, 1, 196610, 655377, 1, 196610, 655378, 1, 196610, 655379, 1, 196609, 655380, 1, 196610, 655381, 1, 65538, 655382, 1, 196610, 655383, 1, 196610, 655384, 1, 196610, 655385, 1, 196610, 655386, 1, 65538, 655387, 1, 196611, 655388, 1, 196609, 655389, 1, 196610, 655390, 1, 65538, 655391, 1, 196610, 655392, 1, 65538, 655393, 1, 65539, 720896, 1, 65537, 720897, 1, 196611, 720898, 1, 196610, 720899, 1, 196610, 720900, 1, 196609, 720901, 1, 65538, 720902, 1, 196611, 720903, 1, 65538, 720904, 1, 196609, 720905, 1, 196611, 720906, 1, 196609, 720907, 1, 196610, 720908, 1, 196611, 720909, 1, 196610, 720910, 1, 196611, 720911, 1, 196611, 720912, 1, 196610, 720913, 1, 196610, 720914, 1, 196610, 720915, 1, 196611, 720916, 1, 65538, 720917, 1, 65538, 720918, 1, 196609, 720919, 1, 196610, 720920, 1, 196610, 720921, 1, 196611, 720922, 1, 65538, 720923, 1, 196609, 720924, 1, 196609, 720925, 1, 196609, 720926, 1, 196611, 720927, 1, 196610, 720928, 1, 196610, 720929, 1, 65539, 786432, 1, 65537, 786433, 1, 196611, 786434, 1, 196609, 786435, 1, 196610, 786436, 1, 196609, 786437, 1, 196609, 786438, 1, 65538, 786439, 1, 196609, 786440, 1, 196610, 786441, 1, 196609, 786442, 1, 196611, 786443, 1, 196609, 786444, 1, 65538, 786445, 1, 196609, 786446, 1, 196611, 786447, 1, 65538, 786448, 1, 196611, 786449, 1, 196611, 786450, 1, 196611, 786451, 1, 196610, 786452, 1, 196610, 786453, 1, 196609, 786454, 1, 196609, 786455, 1, 196611, 786456, 1, 196611, 786457, 1, 196610, 786458, 1, 196609, 786459, 1, 196610, 786460, 1, 65538, 786461, 1, 65538, 786462, 1, 196611, 786463, 1, 196611, 786464, 1, 196611, 786465, 1, 65539, 851968, 1, 65537, 851969, 1, 65538, 851970, 1, 65538, 851971, 1, 196610, 851972, 1, 196610, 851973, 1, 65538, 851974, 1, 196609, 851975, 1, 196611, 851976, 1, 196609, 851977, 1, 196610, 851978, 1, 65538, 851979, 1, 65538, 851980, 1, 196610, 851981, 1, 65538, 851982, 1, 196609, 851983, 1, 196610, 851984, 1, 196609, 851985, 1, 196611, 851986, 1, 196609, 851987, 1, 196610, 851988, 1, 196609, 851989, 1, 65538, 851990, 1, 65538, 851991, 1, 196610, 851992, 1, 196610, 851993, 1, 196609, 851994, 1, 196610, 851995, 1, 196610, 851996, 1, 65538, 851997, 1, 196611, 851998, 1, 196610, 851999, 1, 196610, 852000, 1, 196611, 852001, 1, 65539, 917504, 1, 65537, 917505, 1, 65538, 917506, 1, 196611, 917507, 1, 196611, 917508, 1, 196611, 917509, 1, 196611, 917510, 1, 196611, 917511, 1, 65538, 917512, 1, 65538, 917513, 1, 196610, 917514, 1, 65538, 917515, 1, 65538, 917516, 1, 196611, 917517, 1, 65538, 917518, 1, 196611, 917519, 1, 65538, 917520, 1, 196610, 917521, 1, 65538, 917522, 1, 196609, 917523, 1, 196611, 917524, 1, 196611, 917525, 1, 196609, 917526, 1, 196610, 917527, 1, 196611, 917528, 1, 196611, 917529, 1, 196609, 917530, 1, 196611, 917531, 1, 196611, 917532, 1, 196609, 917533, 1, 65538, 917534, 1, 65538, 917535, 1, 196611, 917536, 1, 196611, 917537, 1, 65539, 983040, 1, 65537, 983041, 1, 65538, 983042, 1, 196610, 983043, 1, 65538, 983044, 1, 65538, 983045, 1, 196610, 983046, 1, 196609, 983047, 1, 196609, 983048, 1, 196611, 983049, 1, 65538, 983050, 1, 196609, 983051, 1, 196611, 983052, 1, 196610, 983053, 1, 196611, 983054, 1, 65538, 983055, 1, 65538, 983056, 1, 65538, 983057, 1, 196611, 983058, 1, 196610, 983059, 1, 196610, 983060, 1, 196610, 983061, 1, 196610, 983062, 1, 65538, 983063, 1, 65538, 983064, 1, 196610, 983065, 1, 196610, 983066, 1, 65538, 983067, 1, 196609, 983068, 1, 196610, 983069, 1, 196611, 983070, 1, 65538, 983071, 1, 196610, 983072, 1, 65538, 983073, 1, 65539, 1048576, 1, 65537, 1048577, 1, 65538, 1048578, 1, 196611, 1048579, 1, 196609, 1048580, 1, 196609, 1048581, 1, 65538, 1048582, 1, 65538, 1048583, 1, 196610, 1048584, 1, 196611, 1048585, 1, 196610, 1048586, 1, 196610, 1048587, 1, 65538, 1048588, 1, 196610, 1048589, 1, 196611, 1048590, 1, 196611, 1048591, 1, 196610, 1048592, 1, 196609, 1048593, 1, 196609, 1048594, 1, 196610, 1048595, 1, 196609, 1048596, 1, 65538, 1048597, 1, 65538, 1048598, 1, 65538, 1048599, 1, 196611, 1048600, 1, 196611, 1048601, 1, 196610, 1048602, 1, 65538, 1048603, 1, 196609, 1048604, 1, 196609, 1048605, 1, 196609, 1048606, 1, 196609, 1048607, 1, 196610, 1048608, 1, 196610, 1048609, 1, 65539, 1114112, 1, 65537, 1114113, 1, 196610, 1114114, 1, 65538, 1114115, 1, 196610, 1114116, 1, 196609, 1114117, 1, 196609, 1114118, 1, 196610, 1114119, 1, 196610, 1114120, 1, 196611, 1114121, 1, 196610, 1114122, 1, 65538, 1114123, 1, 196609, 1114124, 1, 65538, 1114125, 1, 65538, 1114126, 1, 196611, 1114127, 1, 196610, 1114128, 1, 65538, 1114129, 1, 196611, 1114130, 1, 65538, 1114131, 1, 196609, 1114132, 1, 196609, 1114133, 1, 196610, 1114134, 1, 65538, 1114135, 1, 196610, 1114136, 1, 65538, 1114137, 1, 196610, 1114138, 1, 65538, 1114139, 1, 196609, 1114140, 1, 196610, 1114141, 1, 196609, 1114142, 1, 196610, 1114143, 1, 65538, 1114144, 1, 65538, 1114145, 1, 65539, 1179648, 1, 131073, 1179649, 1, 131074, 1179650, 1, 131074, 1179651, 1, 131074, 1179652, 1, 131074, 1179653, 1, 131074, 1179654, 1, 131074, 1179655, 1, 131074, 1179656, 1, 131074, 1179657, 1, 131074, 1179658, 1, 131074, 1179659, 1, 131074, 1179660, 1, 131074, 1179661, 1, 131074, 1179662, 1, 131074, 1179663, 1, 131074, 1179664, 1, 131074, 1179665, 1, 131074, 1179666, 1, 131074, 1179667, 1, 131074, 1179668, 1, 131074, 1179669, 1, 131074, 1179670, 1, 131074, 1179671, 1, 131074, 1179672, 1, 131074, 1179673, 1, 131074, 1179674, 1, 131074, 1179675, 1, 131074, 1179676, 1, 131074, 1179677, 1, 131074, 1179678, 1, 131074, 1179679, 1, 131074, 1179680, 1, 131074, 1179681, 1, 131075 )

[node name="Camera2D2" type="Camera2D" parent="."]
position = Vector2( 327.97, 228.964 )
current = true
drag_margin_left = 0.02
script = ExtResource( 4 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" type="KinematicBody2D" parent="YSort"]
position = Vector2( 328, 208 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="YSort/Player"]
texture = ExtResource( 1 )
hframes = 13

[node name="PhysicsCollisionShape2D" type="CollisionShape2D" parent="YSort/Player"]
position = Vector2( 0, 21 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="YSort/Player"]
position = Vector2( 0, 24 )
enabled = true
cast_to = Vector2( 64, 0 )
collision_mask = 4
collide_with_areas = true

[node name="ActionTimer" type="Timer" parent="YSort/Player"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="YSort/Player"]
anims/IdleDown = SubResource( 2 )
anims/WalkLeft = SubResource( 3 )
anims/WalkRight = SubResource( 4 )

[node name="InteractionArea2D" type="Area2D" parent="YSort/Player"]
collision_layer = 2
collision_mask = 2

[node name="InteractionShape" type="CollisionShape2D" parent="YSort/Player/InteractionArea2D"]
position = Vector2( 0, 24 )
shape = SubResource( 5 )

[node name="Rock" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 224, 320 )

[node name="Rock2" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 512, 152 )

[node name="Rock3" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 152, 136 )

[node name="ParcelSign" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 536, 72 )

[node name="ShopSign" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 224, 72 )
